--- a/less/home-page.less
+++ b/less/home-page.less
@@ -9,10 +9,15 @@
   .intro {
     width: 100%;
     margin-bottom: 30px;
+
+    @media @mobile {
+      margin-bottom: 0;
+    }
   
     img {
         margin: 20px 0 20px 0;
         border-top: @border;
+
     }
   
     p {
@@ -21,7 +26,7 @@
   }
 
   .content-section {
-    margin: 30px 0;
+    // margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -39,7 +44,7 @@
 
       @media @mobile {
         width: 100%;
-        // margin-top: 30px;
+        margin-top: 30px;
       }
     }
 
