--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,12 +4,16 @@ header {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    // margin-top: 20px;
 
     @media @mobile {
         flex-direction: column;
         justify-content: center;
         text-align: center;
+    }
+
+    h1 {
+        padding-top: 20px;
     }
 
     nav {
